Closes #1710, #1714: Add vertical spacing to page content for fixed-position Arizona Header on mobile (#1711)

--- a/scss/custom/_arizona-header.scss
+++ b/scss/custom/_arizona-header.scss
@@ -9,13 +9,23 @@
 }
 
 @media screen and (max-width: 992px) {
+  body:has(.az-fixed-header-on-mobile) {
+    padding-top: 50px;
+
+    :target {
+      scroll-margin-top: 58px;
+    }
+  }
   .arizona-header {
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    z-index: 100;
     height: 50px;
+
+    &.az-fixed-header-on-mobile {
+      position: fixed;
+      top: 0;
+      right: 0;
+      left: 0;
+      z-index: 100;
+    }
   }
   .arizona-logo {
     flex-shrink: 1;
